reverting homepage . theory

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://ricky-bruner.github.io/WebpageDemos/",
   "name": "webpagedemos",
   "version": "0.1.0",
   "private": true,
