name change to transfigure.io

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://ricky-bruner.github.io/WebpageDemos/",
-  "name": "webpagedemos",
+  "homepage": "https://ricky-bruner.github.io/transfigure.io/",
+  "name": "transfigure.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
