updated homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ricky-bruner.github.io/transfigure.io/",
+  "homepage": "https:/www.transfigure.io/",
   "name": "transfigure.io",
   "version": "0.1.0",
   "private": true,
