tried something new for homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "www.transfigure.io",
+  "homepage": "https://ricky-bruner.github.io/",
   "name": "transfigure.io",
   "version": "0.1.0",
   "private": true,
